--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -292,7 +292,7 @@ section {
         font-family: var(--font-primary);
         font-size: 14px;
         font-weight: 500;
-        color: black;
+        color: rgb(200, 63, 63);
         text-transform: uppercase;
         white-space: nowrap;
         transition: 0.3s;
@@ -313,7 +313,7 @@ section {
         height: 2px;
         bottom: -6px;
         left: 0;
-        background-color: var(--color-primary);
+        background-color: rgb(215, 138, 138);
         visibility: hidden;
         width: 0px;
         transition: all 0.3s ease-in-out 0s;
@@ -330,7 +330,7 @@ section {
     .navbar .active,
     .navbar .active:focus,
     .navbar li:hover>a {
-        color: darkblue;
+        color: #8c8c8c;
     }
 
     .navbar .dropdown ul {
@@ -344,7 +344,7 @@ section {
         opacity: 0;
         visibility: hidden;
         background: #fff;
-        box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+        box-shadow: 0px 0px 30px rgba(171, 178, 194, 0.25);
         transition: 0.3s;
     }
 
@@ -356,7 +356,7 @@ section {
         padding: 10px 20px;
         font-size: 15px;
         text-transform: none;
-        color: var(--color-default);
+        color: white;
         font-weight: 400;
     }
 
@@ -367,7 +367,7 @@ section {
     .navbar .dropdown ul a:hover,
     .navbar .dropdown ul .active:hover,
     .navbar .dropdown ul li:hover>a {
-        color: var(--color-primary);
+        color: rgb(38, 124, 135);
     }
 
     .navbar .dropdown:hover>ul {
@@ -416,7 +416,7 @@ section {
         position: fixed;
         top: 0;
         right: -100%;
-        width: 100%;
+        width: 30%;
         max-width: 400px;
         bottom: 0;
         transition: 0.3s;
@@ -428,7 +428,7 @@ section {
         inset: 0;
         padding: 50px 0 10px 0;
         margin: 0;
-        background: rgba(0, 0, 0, 0.8);
+        background: rgba(255, 255, 255, 0.8);
         overflow-y: auto;
         transition: 0.3s;
         z-index: 9998;
@@ -441,9 +441,9 @@ section {
         justify-content: space-between;
         padding: 10px 20px;
         font-family: var(--font-primary);
-        font-size: 15px;
+        font-size: 22px;
         font-weight: 500;
-        color: black;
+        color: #fff
         white-space: nowrap;
         text-transform: uppercase;
         transition: 0.3s;
@@ -460,7 +460,7 @@ section {
     .navbar .active,
     .navbar .active:focus,
     .navbar li:hover>a {
-        color: darkblue;
+        color: rgb(0, 0, 0)
     }
 
     .navbar .dropdown ul,
@@ -470,7 +470,7 @@ section {
         padding: 10px 0;
         margin: 10px 20px;
         transition: all 0.5s ease-in-out;
-        border: 1px solid #222428;
+        border: 1px solid white;
     }
 
     .navbar .dropdown>.dropdown-active,
@@ -480,8 +480,8 @@ section {
 
     .mobile-nav-show {
         position: relative;
-        color: #fff;
-        font-size: 28px;
+        color: #000;
+        font-size: 34px;
         cursor: pointer;
         line-height: 0;
         transition: 0.5s;
@@ -682,7 +682,7 @@ section {
     font-weight: 700;
     font-size: 20px;
     margin-bottom: 15px;
-    color: var(--color-secondary);
+    color: #000;
 }
 
 .constructions .card-item p {
@@ -695,7 +695,7 @@ section {
 --------------------------------------------------------------*/
 .services .service-item {
     padding: 40px;
-    background: #8c8c8c;;
+    background: #fff;;
     height: 100%;
 }
 
@@ -729,7 +729,7 @@ section {
 }
 
 .services .service-item h3 {
-    color: var(--color-default);
+    color: #000;
     font-weight: 700;
     margin: 0 0 20px 0;
     padding-bottom: 8px;
@@ -1826,8 +1826,8 @@ section {
 
 .hero .carousel {
     width: 100%;
-    min-height: 100vh;
-    padding: 80px 0;
+    min-height: 75vh;
+    
     margin: 0;
     position: relative;
 }
@@ -1835,9 +1835,7 @@ section {
 .hero .carousel-item {
     position: absolute;
     inset: 0;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+   
     overflow: hidden;
     z-index: 1;
     transition-duration: 0.4s;
@@ -1864,8 +1862,8 @@ section {
 
 .hero .info h2 {
     color: #fff;
-    margin-bottom: 30px;
-    padding-bottom: 30px;
+    /* margin-bottom: 30px;
+    padding-bottom: 30px; */
     font-size: 56px;
     font-weight: 700;
     position: relative;
@@ -1964,310 +1962,6 @@ section {
     opacity: 0.9;
 }
 
-/*--------------------------------------------------------------
-# Blog
---------------------------------------------------------------*/
-.blog .blog-pagination {
-    margin-top: 30px;
-    color: #838893;
-}
-
-.blog .blog-pagination ul {
-    display: flex;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
-.blog .blog-pagination li {
-    margin: 0 5px;
-    transition: 0.3s;
-}
-
-.blog .blog-pagination li a {
-    color: var(--color-secondary);
-    padding: 7px 16px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.blog .blog-pagination li.active,
-.blog .blog-pagination li:hover {
-    background: var(--color-primary);
-    color: #fff;
-}
-
-.blog .blog-pagination li.active a,
-.blog .blog-pagination li:hover a {
-    color: var(--color-white);
-}
-
-/*--------------------------------------------------------------
-# Blog Posts List
---------------------------------------------------------------*/
-.blog .posts-list .post-item {
-    box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.06);
-    transition: 0.3s;
-}
-
-.blog .posts-list .post-img img {
-    transition: 0.5s;
-}
-
-.blog .posts-list .post-date {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    background-color: var(--color-primary);
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 13px;
-    padding: 6px 12px;
-    font-weight: 500;
-}
-
-.blog .posts-list .post-content {
-    padding: 30px;
-}
-
-.blog .posts-list .post-title {
-    font-size: 24px;
-    color: var(--color-secondary);
-    font-weight: 700;
-    transition: 0.3s;
-    margin-bottom: 15px;
-}
-
-.blog .posts-list .meta i {
-    font-size: 16px;
-    color: var(--color-primary);
-}
-
-.blog .posts-list .meta span {
-    font-size: 15px;
-    color: #838893;
-}
-
-.blog .posts-list p {
-    margin-top: 20px;
-}
-
-.blog .posts-list hr {
-    color: #888;
-    margin-bottom: 20px;
-}
-
-.blog .posts-list .readmore {
-    display: flex;
-    align-items: center;
-    font-weight: 600;
-    line-height: 1;
-    transition: 0.3s;
-    color: #838893;
-}
-
-.blog .posts-list .readmore i {
-    line-height: 0;
-    margin-left: 6px;
-    font-size: 16px;
-}
-
-.blog .posts-list .post-item:hover .post-title,
-.blog .posts-list .post-item:hover .readmore {
-    color: var(--color-primary);
-}
-
-.blog .posts-list .post-item:hover .post-img img {
-    transform: scale(1.1);
-}
-
-/*--------------------------------------------------------------
-# Blog Details
---------------------------------------------------------------*/
-.blog .blog-details {
-    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-    padding: 30px;
-}
-
-.blog .blog-details .post-img {
-    margin: -30px -30px 20px -30px;
-    overflow: hidden;
-}
-
-.blog .blog-details .title {
-    font-size: 28px;
-    font-weight: 700;
-    padding: 0;
-    margin: 20px 0 0 0;
-    color: var(--color-secondary);
-}
-
-.blog .blog-details .content {
-    margin-top: 20px;
-}
-
-.blog .blog-details .content h3 {
-    font-size: 22px;
-    margin-top: 30px;
-    font-weight: bold;
-}
-
-.blog .blog-details .content blockquote {
-    overflow: hidden;
-    background-color: rgba(82, 86, 94, 0.06);
-    padding: 60px;
-    position: relative;
-    text-align: center;
-    margin: 20px 0;
-}
-
-.blog .blog-details .content blockquote p {
-    color: var(--color-default);
-    line-height: 1.6;
-    margin-bottom: 0;
-    font-style: italic;
-    font-weight: 500;
-    font-size: 22px;
-}
-
-.blog .blog-details .content blockquote:after {
-    content: "";
-    position: absolute;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    width: 3px;
-    background-color: var(--color-primary);
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.blog .blog-details .meta-top {
-    margin-top: 20px;
-    color: #6c757d;
-}
-
-.blog .blog-details .meta-top ul {
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    align-items: center;
-    padding: 0;
-    margin: 0;
-}
-
-.blog .blog-details .meta-top ul li+li {
-    padding-left: 20px;
-}
-
-.blog .blog-details .meta-top i {
-    font-size: 16px;
-    margin-right: 8px;
-    line-height: 0;
-    color: var(--color-primary);
-}
-
-.blog .blog-details .meta-top a {
-    color: #6c757d;
-    font-size: 14px;
-    display: inline-block;
-    line-height: 1;
-    transition: 0.3s;
-}
-
-.blog .blog-details .meta-top a:hover {
-    color: var(--color-primary);
-}
-
-.blog .blog-details .meta-bottom {
-    padding-top: 10px;
-    border-top: 1px solid rgba(82, 86, 94, 0.15);
-}
-
-.blog .blog-details .meta-bottom i {
-    color: #838893;
-    display: inline;
-}
-
-.blog .blog-details .meta-bottom a {
-    color: rgba(82, 86, 94, 0.8);
-    transition: 0.3s;
-}
-
-.blog .blog-details .meta-bottom a:hover {
-    color: var(--color-primary);
-}
-
-.blog .blog-details .meta-bottom .cats {
-    list-style: none;
-    display: inline;
-    padding: 0 20px 0 0;
-    font-size: 14px;
-}
-
-.blog .blog-details .meta-bottom .cats li {
-    display: inline-block;
-}
-
-.blog .blog-details .meta-bottom .tags {
-    list-style: none;
-    display: inline;
-    padding: 0;
-    font-size: 14px;
-}
-
-.blog .blog-details .meta-bottom .tags li {
-    display: inline-block;
-}
-
-.blog .blog-details .meta-bottom .tags li+li::before {
-    padding-right: 6px;
-    color: var(--color-default);
-    content: ",";
-}
-
-.blog .blog-details .meta-bottom .share {
-    font-size: 16px;
-}
-
-.blog .blog-details .meta-bottom .share i {
-    padding-left: 5px;
-}
-
-.blog .post-author {
-    padding: 20px;
-    margin-top: 30px;
-    box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
-}
-
-.blog .post-author img {
-    max-width: 120px;
-    margin-right: 20px;
-}
-
-.blog .post-author h4 {
-    font-weight: 600;
-    font-size: 22px;
-    margin-bottom: 0px;
-    padding: 0;
-    color: var(--color-secondary);
-}
-
-.blog .post-author .social-links {
-    margin: 0 10px 10px 0;
-}
-
-.blog .post-author .social-links a {
-    color: rgba(82, 86, 94, 0.5);
-    margin-right: 5px;
-}
-
-.blog .post-author p {
-    font-style: italic;
-    color: rgba(108, 117, 125, 0.8);
-    margin-bottom: 0;
-}
 
 /*--------------------------------------------------------------
 # Blog Sidebar
